--- a/web/src/main/resources/static/html/index.html
+++ b/web/src/main/resources/static/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SpringBoot-Web</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
 
