--- a/jwt/src/main/resources/static/index.html
+++ b/jwt/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
     <p class="password"></p>
 </div>
 <script type="text/javascript">
-    const basicUrl = 'https://localhost:8080/jwt';
+    const basicUrl = '/jwt';
     const logonUrl = basicUrl + '/logon';
     const loginUrl = basicUrl + '/login';
     const userUrl = basicUrl + '/user';
